--- a/unidades de medida/styles.css
+++ b/unidades de medida/styles.css
@@ -1,23 +1,42 @@
-div{
-    background-color: #ededed;
+body{
+    color: #ededed;
+}
+
+.card{
+    background-color: #48e;
     padding: 20px;
+    margin: auto;
     font-family: sans-serif;
-    border-left: 5px solid #999 ;
+    text-align: center;
+    box-shadow: 0px 0px 45px  ;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px 0px #000;
+
 }
 
-h1{
+.title{
+    padding-top: 10px;
+    font-size: 22px;
     margin: 0;
-    font-size: 20px;
-
 }
 
-span{   
-    color: #999;
-    font-size: 16px;
+.subtitle{   
+    margin: 0;
+    font-size: 13px;
     font-weight: 100;
+    letter-spacing: 2px;
 }
-p{
-    color: #555;
-    margin: 0;
-    width: 50%;
+.content{
+    font-size: 11px;
+    padding: 10px ;
+    
+    text-align: justify;
+    margin-bottom: 0;
+
+}
+
+.img{
+    width: 150px;
+    border-radius: 50%  ;
+
 }
