--- a/ss/styles.css
+++ b/ss/styles.css
@@ -1,5 +1,6 @@
 body{
     margin: 0;
+    background: linear-gradient(to bottom #000 , #888);
 }
 
 form{
@@ -7,8 +8,9 @@ form{
     background-color: #ededed;
     max-width: 500px;
     margin: auto;
-    box-shadow: 0px 0px 35px #0006;
+    box-shadow: 0px 0px 35px #0008;
     margin-top: 50px;
+
 }
 
 h2{
@@ -31,14 +33,15 @@ input, textarea{
     box-sizing: border-box;
     padding: 8px 12px;
     border: none;
-    border-left: 2px solid #999;
+    border-left: 2px solid #666;
 }
 
 textarea{
     resize: none;
-    min-width: 100px;
-    min-height: 102px;
     font-family: sans-serif;
+    width: 100%;
+    margin-bottom: 12px;
+
     
 }
 
@@ -46,7 +49,16 @@ label{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 0.9em;
     line-height: 2;
+    margin-left: 15px;
 }
 
+fieldset{
+    margin: 10px 0;
+    border: 2px solid #6662;
+}
+
+legend{
+    padding: 0 5px;
+}
 
 
